--- a/templates/contact.html
+++ b/templates/contact.html
@@ -119,11 +119,15 @@
     </nav><br><br>
     <div class="carousel">
         <div class="card">
+            <img src="{{ url_for('static', filename='profile3.jpg') }}" alt="Person">
+            <h3>Kiran Kumar</h3>
+            <p>Full-Stact Developer</p>
+        </div>
+        <div class="card">
             <img src="{{ url_for('static', filename='profile1.jpg') }}" alt="Person">
             <h3>Vignesh</h3>
-            <p>Fullstack Developer</p>
+            <p>Full-stack Developer</p>
         </div>
-    
         <div class="card">
             <img src="{{ url_for('static', filename='profile2.jpg') }}" alt="Person">
             <h3>K. Lakshmana Sai</h3>
@@ -133,12 +137,6 @@
         <div class="card">
             <img src="{{ url_for('static', filename='profile3.jpg') }}" alt="Person">
             <h3>Vivek</h3>
-            <p>Frontend Developer</p>
-        </div>
-    
-        <div class="card">
-            <img src="{{ url_for('static', filename='profile4.jpg') }}" alt="Person">
-            <h3>Kavya</h3>
             <p>Frontend Developer</p>
         </div>
     </div><br><br>
