--- a/templates/contact.html
+++ b/templates/contact.html
@@ -119,7 +119,7 @@
     </nav><br><br>
     <div class="carousel">
         <div class="card">
-            <img src="{{ url_for('static', filename='profile3.jpg') }}" alt="Person">
+            <img src="{{ url_for('static', filename='125.jpg') }}" alt="Person">
             <h3>Kiran Kumar</h3>
             <p>Full-Stact Developer</p>
         </div>
@@ -132,12 +132,6 @@
             <img src="{{ url_for('static', filename='profile2.jpg') }}" alt="Person">
             <h3>K. Lakshmana Sai</h3>
             <p>Backend Developer</p>
-        </div>
-    
-        <div class="card">
-            <img src="{{ url_for('static', filename='profile3.jpg') }}" alt="Person">
-            <h3>Vivek</h3>
-            <p>Frontend Developer</p>
         </div>
     </div><br><br>
     
